@@ -67,6 +67,7 @@ requests from users, including:
   Lisa McShane
   Ana Patricia Martins
   Tapan Mehta
+  Isabelle Michaud
   Daryl Morris
   Joey Morris
   Kirill Mueller
